--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -213,9 +213,46 @@ document.getElementById("iframe").height = 600 ;
 </script>
 <h4>w12任務一影片</h4>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nnINUti76Yk" width="560"></iframe></p>
-<h2>w14</h2>
+<h2>國旗(w14)</h2>
 <p>國旗</p>
 <p><canvas height="200" id="canvas" width="300"></canvas></p>
 <script src="/cp2019/new/roc_flag/roc_flag.js"></script>
 <p>溫度轉換 請輸入轉換溫度:<br/>(數字加上 C or F)<br/><br/><input id="temp" max="30" min="1" type="text" value="20F"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-<script src="/cp2019/new/temp2/temp2.js"></script>
+<p></p>
+<h2>w17考試</h2>
+<p></p>
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('weight-dart')">weight-1</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('weight')">weight-2</button></p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><br/><iframe height="600" id="iframe" src="https://dartpad.github.io/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/weight-dart&amp;theme=dark" width="800"></iframe></p>
+<p>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823210&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823210&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823210&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+</p>
