--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -263,5 +263,4 @@ document.getElementById("iframe").height = 600 ;
 </script>
 </p>
 <p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-<p>=======</p>
-<script src="/cp2019/new/temp2/temp2.js"></script>
+<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script>
