--- a/content/w17考試.html
+++ b/content/w17考試.html
@@ -187,7 +187,9 @@ document.getElementById("iframe").height = 600 ;
 </script>
 </p>
 <p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script><br />w14 << <a href='w14.html'>Previous</a> </div>
+<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script>
+<p><canvas height="200" id="canvas" width="300"></canvas> <button id="button">Clear Canvas</button> <button id="fr">Draw FR</button> <button id="roc">Draw ROC</button> <button id="jp">Draw JP</button> <button id="ru">Draw RU</button> <button id="ne">Draw NE</button> <button id="ge">Draw GE</button> <button id="uk">Draw UK</button></p>
+<script src="/../cp2019/downloads/dart_ex/flag/flag.js"></script><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
