--- a/content/w17考試.html
+++ b/content/w17考試.html
@@ -154,7 +154,7 @@ init_mathjax();
 <h4>純 Dart 程式</h4>
 <p><button onclick="getDart('weight-dart')">weight-1</button></p>
 <h4>Html 程式</h4>
-<p><button onclick="getHtmlDart('weight')">weight-2</button></p>
+<p><button onclick="getHtmlDart('weight')">weight-2</button> <button onclick="getHtmlDart('flag')">國旗</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
 <p><br/><iframe height="600" id="iframe" src="https://dartpad.github.io/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/weight-dart&amp;theme=dark" width="800"></iframe></p>
@@ -187,9 +187,7 @@ document.getElementById("iframe").height = 600 ;
 </script>
 </p>
 <p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script>
-<p><canvas height="200" id="canvas" width="300"></canvas> <button id="button">Clear Canvas</button> <button id="fr">Draw FR</button> <button id="roc">Draw ROC</button> <button id="jp">Draw JP</button> <button id="ru">Draw RU</button> <button id="ne">Draw NE</button> <button id="ge">Draw GE</button> <button id="uk">Draw UK</button></p>
-<script src="/../cp2019/downloads/dart_ex/flag/flag.js"></script><br />w14 << <a href='w14.html'>Previous</a> </div>
+<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
